[aliases]
sdist = build_sass sdist
bdist = build_sass bdist
test = pytest

[metadata]
description-file = README.rst

[bdist_wheel]
universal=1

[uwsgi]
# chown-socket = nginx:nginx
# socket = /tmp/uwsgi.sock
# socket = :443,intertwine.crt,intertwine.key
# socket = 0.0.0.0:8000
http = 0.0.0.0:8000
chmod-socket = 664
vacuum = true
die-on-term = true
processes = 8

module = wsgi
callable = app
master = true
stats = 0.0.0.0:9191


