[aliases]
sdist = build_sass sdist
bdist = build_sass bdist
test = pytest

[metadata]
description-file = README.rst

[bdist_wheel]
universal=1

[uwsgi]
# chown-socket = nginx:nginx
# socket = /tmp/uwsgi.sock
# socket = :443,intertwine.crt,intertwine.key
# socket = 0.0.0.0:8000
http = 0.0.0.0:8000
chmod-socket = 664
vacuum = true
die-on-term = true
processes = 8

module = wsgi
callable = app
master = true
stats = 0.0.0.0:9191

[build_sphinx]
source_dir = docs
build_dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
all_files = 1

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True
# autodoc_tree_excludes = ...
# Let pbr itself generate the apidoc
# autodoc_index_modules = True
# autodoc_exclude_modules = ...
# Convert warnings to errors
# warnerrors = True

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel,bdist_egg

[coverage:run]
branch = True
omit =
    tests/*
    front_end/*
source =
    intertwine

[coverage:html]
directory = docs/_build/html/

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    def __str__
    def __dir__
    if __name__ == .__main__.:

[tool:pytest]
timeout = 300
testpaths = tests intertwine
addopts =
    # Shows local variables in tracebacks
    --showlocals
    # Cleans pytest cache between each run
    --cache-clear
    # More output
    --verbose
    # Show colored output
    --color=yes
    # Show extra output on errors
    -r a
    # Append coverage to existing coverage data
    # --cov-append
    # Display missing lines on coverage report output
    # --cov-report=term-missing
    # Fail coverage test if coverage is below % value
    # --cov-fail-under=60
    # Run flake8 on code
    # --flake8
    # Package path(s) to cover
    # --cov=intertwine
    # Stop after first failure
    # --exitfirst
    # Break on errors
    # --pdb
    # Do not cut out traceback
    # --full-trace
    # Show stdout
    # -s
norecursedirs = .git build tmp* *.egg-info venv* front_end
looponfailroots = intertwine tests
flake8-ignore =
    *.py E201
    *.py E231
    *.py E501
    __init__.py F401 E402
    api.py F401
    config/*.py ALL
    data/*.py ALL
    docs/*.py ALL
    run.py ALL
    scripts/*.py ALL
    setup.py ALL
    tests/*.py ALL
    wsgi.py ALL

[isort]
line_length=80
indent='    '
multi_line_output=3
length_sort=1
